--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 datasets/kaggle.csv filter=lfs diff=lfs merge=lfs -text
 training/random_forest/rf_model.pkl filter=lfs diff=lfs merge=lfs -text
+training/KNN/knn_model.pkl filter=lfs diff=lfs merge=lfs -text
