--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@ datasets/kaggle.csv filter=lfs diff=lfs merge=lfs -text
 training/random_forest/rf_model.pkl filter=lfs diff=lfs merge=lfs -text
 training/KNN/knn_model.pkl filter=lfs diff=lfs merge=lfs -text
 training/SVM/svm_model.pkl filter=lfs diff=lfs merge=lfs -text
+DatasetAfterFeatureSelection filter=lfs diff=lfs merge=lfs -text
