--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@ training/random_forest/rf_model.pkl filter=lfs diff=lfs merge=lfs -text
 training/KNN/knn_model.pkl filter=lfs diff=lfs merge=lfs -text
 training/SVM/svm_model.pkl filter=lfs diff=lfs merge=lfs -text
 DatasetAfterFeatureSelection filter=lfs diff=lfs merge=lfs -text
+DatasetAfterFeatureSelection/ filter=lfs diff=lfs merge=lfs -text
